[package]
name = "quick_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
serde_derive = "1.0.145"
termion = "1.5.6"
toml = "0.5.9"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1

